--- a/Organick.html
+++ b/Organick.html
@@ -411,7 +411,15 @@
 
         <section class="page-5">
             <div class="page-5-body">
-                <div class="page-5-text-box"></div>
+                <div class="page-5-text-container">
+                    <div class="page-5-text-box">
+                        <span class="page-5-italic-green">Offer</span>
+                        <h1 class="page-5-h1-white">We Offer Organic For You</h1>
+                    </div>
+                    <div class="page-5-text-box">
+                        <button type="button" class="page-5-button">View All Product <img src="img/main/aerrow.png" alt=""></button>
+                    </div>
+                </div>
                 <div class="page-3-container">
                     <div class="page-3-box">
                         <span class="page-3-product-type">Vegetable</span>
