--- a/Organick.html
+++ b/Organick.html
@@ -509,7 +509,32 @@
 
         <section class="page-6">
             <div class="page-6-body">
-
+                <div class="page-6-background-half-box-1"></div>
+                <div class="page-6-background-half-box-2"></div>
+                <div class="page-6-content-box">
+                    <div class="wrapper">
+                        <span class="page-6-italic-green">Eco Friendly</span>
+                        <h1 class="page-6-h1">
+                            Econis is a Friendly <br>
+                            Organic Store
+                        </h1>
+                    </div>
+                    <div class="page-6-content">
+                        <span class="page-6-span">Start with Our Company First</span>
+                        <p class="page-6-p">Sed ut perspiciatis unde omnis iste natus error sit voluptat accusantium doloremque laudantium. Sed ut perspiciatis.
+                        </p>
+                    </div>
+                    <div class="page-6-content">
+                        <span class="page-6-span">Learn How to Grow Yourself</span>
+                        <p class="page-6-p">Sed ut perspiciatis unde omnis iste natus error sit voluptat accusantium doloremque laudantium. Sed ut perspiciatis.
+                        </p>
+                    </div>
+                    <div class="page-6-content">
+                        <span class="page-6-span">Farming Strategies of Today</span>
+                        <p class="page-6-p">Sed ut perspiciatis unde omnis iste natus error sit voluptat accusantium doloremque laudantium. Sed ut perspiciatis.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
