--- a/Organick.html
+++ b/Organick.html
@@ -542,7 +542,15 @@
 
         <section class="page-7">
             <div class="page-7-body">
-
+                <div class="page-7-box-1">
+                    <div class="page-7-content">Organic Juice</div>
+                </div>
+                <div class="page-7-box-2">
+                    <div class="page-7-content">Organic Food</div>
+                </div>
+                <div class="page-7-box-3">
+                    <div class="page-7-content">Nuts Cookis</div>
+                </div>
             </div>
         </section>
 
