started page-8 fixed using variables

--- a/Organick.html
+++ b/Organick.html
@@ -558,7 +558,43 @@
 
         <section class="page-8">
             <div class="page-8-body">
-
+                <div class="page-8-text-box">
+                    <span class="page-8-italic-green">News</span>
+                    <div class="page-8-content-box">
+                        <h1 class="page-8-content-h1">Discover weekly content about organic food, & more</h1>
+                        <button type="button" class="page-8-more-new-button">More News <img src="img/main/aerrow.png" alt=""></button>
+                    </div>
+                </div>
+                <div class="page-8-container">
+                    <div class="page-8-box-1">
+                        <div class="page-8-date-box">
+                            <span class="page-8-date-span-1">25 </span><span class="page-8-date-span-2"> Nov</span>
+                        </div>
+                        <div class="page-8-inner-box">
+                            <img src="img/main/page-8-user-icon.png" alt="" class="page-8-user-icon">
+                            <span class="page-8-user-name">By Rachi Card</span>
+                        </div>
+                        <div class="page-8-inner-text-box">
+                            <h1 class="page-8-h1">The Benefits of Vitamin D & How to Get It</h1>
+                            <p class="page-8-p">Simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
+                        </div>
+                        <button type="button" class="page-8-button">Read More</button>
+                    </div>
+                    <div class="page-8-box-2">
+                        <div class="page-8-date-box">
+                            <span class="page-8-date-span-1">25 </span><span class="page-8-date-span-2"> Nov</span>
+                        </div>
+                        <div class="page-8-inner-box">
+                            <img src="img/main/page-8-user-icon.png" alt="" class="page-8-user-icon">
+                            <span class="page-8-user-name">By Rachi Card</span>
+                        </div>
+                        <div class="page-8-inner-text-box">
+                            <h1 class="page-8-h1">Our Favourite Summertime Tommeto</h1>
+                            <p class="page-8-p">Simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
+                        </div>
+                        <button type="button" class="page-8-button">Read More</button>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
