--- a/Organick.html
+++ b/Organick.html
@@ -73,7 +73,7 @@
         </div>
     </header>
     <!---------------------- all pages without header and footer --------------------------->
-    <main>
+    <main id="organick">
 
         <!---------------------------------- page-1 -------------------------------------->
 
