end of shop without responsiveness

--- a/about_us.html
+++ b/about_us.html
@@ -11,7 +11,7 @@
         referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/about_us_style.css">
-    <title>Document</title>
+    <title>About Us</title>
 </head>
 <body>
     <header class="default-site-header">
@@ -40,7 +40,7 @@
                             <option class="select-text">Contact         </option>
                         </select>
                     </div>
-                    <a href="" class="text-nav">Shop</a>
+                    <a href="shop.html" class="text-nav">Shop</a>
                     <a href="" class="text-nav">Projects</a>
                     <a href="" class="text-nav">News</a>
                 </div>
@@ -66,6 +66,7 @@
             <!-- banner start -->
             <div class="head-baner">
                 <img src="img/about_us/about_us_header.svg" alt="" class="head-img">
+                <img src="img/about_us/Background Patterns.svg" alt="" class="head-img2">
                 <span class="head-text">about us</span>
             </div>
             <!--banner end -->
