--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <option class="select-text">Contact         </option>
                         </select>
                     </div>
-                    <a href="" class="text-nav">Shop</a>
+                    <a href="shop.html" class="text-nav">Shop</a>
                     <a href="" class="text-nav">Projects</a>
                     <a href="" class="text-nav">News</a>
                 </div>
