--- a/shop.html
+++ b/shop.html
@@ -64,7 +64,7 @@
             <div class="head-baner">
                 <img src="img/shop/banner.svg" alt="" class="head-img">
                 <img src="img/shop/Bg Patterns.svg" class="head-img2">
-                <span class="head-text">about us</span>
+                <span class="head-text">shop</span>
             </div>
             <!--banner end -->
         </div>
