last page left 50%

--- a/shop_single.html
+++ b/shop_single.html
@@ -10,8 +10,8 @@
         crossorigin="anonymous" 
         referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/shop_single_style.css">
+    <title>Shop Single</title>
 </head>
 <body>
     <header class="default-site-header">
@@ -24,7 +24,7 @@
                     <h1 class="site-name">Organick</h1>
                 </a>
                 <div class="text-nav-box">
-                    <a href="" class="text-nav">Home</a>
+                    <a href="index.html" class="text-nav">Home</a>
                     <a href="about_us.html" class="text-nav">About</a>
                     <!-- select box -->
                     <div class="select-box">
@@ -60,13 +60,33 @@
         <div class="header-body">
             <!-- end of navigation bar -->
             <div class="header-container">
-                <!-- place for your header body contents -->
+
+                <!-- banner start -->
+                <div class="head-baner">
+                    <img src="img/Images-s-img.svg" alt="" class="head-img">
+                    <img src="img/Background Pattern-shop-single.svg" alt="" class="head-img2">
+                    <span class="head-text">Shop Single</span>
+                </div>
+                <!--banner end -->
             </div>
         </div>
     </header>
     <main>
+        <div class="my-container">
+            <div class="product-select">
+                <div class="product-img">
+                    <div class="name">Millets</div>
+                </div>
+                <div class="product-text"></div>
+            </div>
 
-        <!-- put your content here -->
+
+
+
+
+
+        </div>
+        
 
     </main>
     <footer class="default-site-footer">
