--- a/shop_single.html
+++ b/shop_single.html
@@ -77,7 +77,28 @@
                 <div class="product-img">
                     <div class="name">Millets</div>
                 </div>
-                <div class="product-text"></div>
+                <div class="product-text">
+                    <div class="prices-container">
+                        <h3>Health Pistachios</h3>
+                        <img src="img/shop/products/Star.svg" alt="">
+                        <div class="prices">
+                            <span>$20.00</span>
+                            <span>$13.00</span>
+                        </div>
+                        <p class="small-p">Simply dummy text of the printing and typesetting industry. Lorem had ceased to been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+                        <div class="pick-scale">
+                            <span>Quantity:</span>
+                            <input type="number" name="" id="" value="1" min="1">
+                            <button class="footer-form-button">
+                                <span>Add To Cart</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19" fill="none">
+                                <circle cx="9.5" cy="9.5" r="9.5" fill="#335B6B"/>
+                                <path d="M9.47641 6.12891L12.871 9.19342L9.47641 12.2579M12.3995 9.19342H5.51611" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
 
 
