end of last page, need to fix adaptiveness

--- a/shop_single.html
+++ b/shop_single.html
@@ -81,7 +81,7 @@
                     <div class="prices-container">
                         <h3>Health Pistachios</h3>
                         <img src="img/shop/products/Star.svg" alt="">
-                        <div class="prices">
+                        <div class="product-prices">
                             <span>$20.00</span>
                             <span>$13.00</span>
                         </div>
@@ -101,7 +101,65 @@
                 </div>
             </div>
 
+            <div class="product-inf">
+                <div class="buttons-box">
+                    <button class="footer-form-button desc">Product Description</button>
+                    <button class="footer-form-button add-inf">Additional Info</button>
+                </div>
+                <p>
+                    Welcome to the world of natural and organic. Here you can discover the bounty of nature. We have grown on the principles of health, ecology, and care. We aim to give our customers a healthy chemical-free meal for perfect nutrition. It offers about 8–10% carbs. Simple sugars — such as glucose and fructose — make up 70% and 80% of the carbs in raw.
+                </p>
+            </div>
 
+            <div class="related-products">
+                <h1>
+                    Related Products
+                </h1>
+                <div class="products-grid">
+                    <div class="product1">
+                        <div class="name">Vegetable</div>
+                        <span>Calabrese Broccoli</span>
+                        <hr>
+                        <div class="prices">
+                            <span class="ex-price">$20.00</span>
+                            <span class="current-price">$13.00</span>
+                            <img src="img/shop/products/Star.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="product2">
+                        <div class="name">Fresh</div>
+                        <img src="" alt="">
+                        <span>Fresh Banana Fruites</span>
+                        <hr>
+                        <div class="prices">
+                            <span class="ex-price">$20.00</span>
+                            <span class="current-price">$14.00</span>
+                            <img src="img/shop/products/Star.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="product3">
+                        <div class="name">Millets</div>
+                        <img src="" alt="">
+                        <span>White Nuts</span>
+                        <hr>
+                        <div class="prices">
+                            <span class="ex-price">$20.00</span>
+                            <span class="current-price">$15.00</span>
+                            <img src="img/shop/products/Star.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="product4">
+                        <div class="name">Vegetable</div>
+                        <img src="" alt="">
+                        <span>Vegan Red Tomato</span>
+                        <hr>
+                        <div class="prices">
+                            <span class="ex-price">$20.00</span>
+                            <span class="current-price">$17.00</span>
+                            <img src="img/shop/products/Star.svg" alt="">
+                        </div>
+                    </div>
+            </div>
 
 
 
